Fix alignment of attachment caption for file and preview

--- a/app/assets/stylesheets/entries.scss
+++ b/app/assets/stylesheets/entries.scss
@@ -2,21 +2,31 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
 
-.attachment figcaption {
-	display: block;
+.attachment--preview {
+	figcaption {
+		display: block;
+	}
+
+	.attachment__name {
+		display: block;
+		text-align: center;
+	}
+}
+
+.attachment--file {
+	figcaption  {
+		display: inline-block;
+	}
+
+	.attachment__name {
+		display: block;
+		text-align: left;
+	}
 }
 
 .attachment {
 	width: 100%;
 	border: none !important;
-}
-
-.attachment__link {
-	display: block;
-}
-
-.attachment__name {
-	display: block;
 }
 
 .attachment__download {
